[package]
name = "actix-api-sample"
version = "0.1.0"
authors = ["tminasen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = {version = "3.3.0", features = ["openssl"]}
futures = "0.3.8"
openssl = "0.10.28"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.5", features = ["mysql"] }
dotenv = "0.15.0"
